# halo2-ce

./: Cargo.toml  README.md
.github/workflows/: ci.yml  lints-beta.yml
arithmetic/curves/: Cargo.toml
arithmetic/curves/benches/: mul.rs
arithmetic/curves/src/: arithmetic.rs  lib.rs  pairing.rs
arithmetic/ff/src/: batch.rs  lib.rs
arithmetic/ff/tests/: derive.rs
arithmetic/goldilocks/: Cargo.toml
arithmetic/goldilocks/benches/: mul.rs
arithmetic/goldilocks/src/: fp.rs  fp2.rs  lib.rs  tests.rs  util.rs
arithmetic/group/: Cargo.toml
arithmetic/group/src/: cofactor.rs  lib.rs  wnaf.rs
arithmetic/pairing/: Cargo.toml
arithmetic/pairing/src/: lib.rs
arithmetic/pasta_curves/: Cargo.toml
arithmetic/pasta_curves/src/: arithmetic.rs  curves.rs  hashtocurve.rs  lib.rs  pallas.rs  vesta.rs
halo2_proofs/: Cargo.toml
halo2_proofs/benches/: arithmetic.rs  dev_lookup.rs  fft.rs  hashtocurve.rs  plonk.rs
halo2_proofs/examples/: circuit-layout.rs  cost-model.rs  simple-example.rs  two-chip.rs
halo2_proofs/src/: arithmetic.rs  circuit.rs  dev.rs  helpers.rs  lib.rs  plonk.rs  poly.rs  transcript.rs
halo2_proofs/src/circuit/: layouter.rs  value.rs
halo2_proofs/src/dev/: cost.rs  failure.rs  gates.rs  graph.rs  metadata.rs  util.rs
halo2_proofs/src/plonk/: assigned.rs  circuit.rs  error.rs  evaluation.rs  lookup.rs  prover.rs
halo2_proofs/src/poly/: commitment.rs  domain.rs  evaluator.rs  multiopen_test.rs  query.rs  strategy.rs
halo2_proofs/src/transcript/: blake2b.rs  (+2 more)
halo2_proofs/tests/: plonk_api.rs
primitives/poseidon/: Cargo.toml
primitives/poseidon/src/: spec.rs
(+38 files in other folders)
