[package]
name = "goldilocks"
version = "0.1.0"
edition = "2021"
authors = ["zhenfei zhang <zhenfei.zhang@hotmail.com>"]

[dependencies]
ff = "0.12.0"
rand_core = "0.6.0"
curves = { path = '../curves' }
pasta_curves = { path = '../pasta_curves' }

[dependencies.subtle]
version = "2.2.1"
features = ["i128"]
default-features = false

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand_xorshift = "0.3"
ark-std = { version = "0.3", features = ["print-trace"] }
